--- a/memory-game-1/memory-game/css/style.css
+++ b/memory-game-1/memory-game/css/style.css
@@ -94,6 +94,15 @@ img {
   margin: 40px 8px 0;
 }
 
+ button {
+  color: white;
+  font-size: 20px;
+  margin: 0;
+  font-weight: 400;
+  letter-spacing: 0.05em;
+  background-color: #F15B31;
+}
+
 /* =============================
 FOOTER
 ================================ */
